--- a/realtime/test-client/index.html
+++ b/realtime/test-client/index.html
@@ -169,7 +169,6 @@
   </main>
 
   <script src="https://cdn.socket.io/4.8.1/socket.io.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/mediasoup-client@3.7.17/lib/mediasoup-client.min.js"></script>
-  <script src="client.js"></script>
+  <script type="module" src="client.js"></script>
 </body>
 </html>
